# SharePointDowloader

./: .gitignore  README.md  pyproject.toml  sp_ls.py
sp_download/: auth.py  cli.py  config.py  downloader.py  graph.py  ui.py
